RESTful API update commit
